2017-01-07  Piotr Trojanek  <piotr.trojanek@gmail.com>

	* elmo-util.el (elmo-object-load): simplify.
	(elmo-passwd-alist-load): simplify; reindent.
	(elmo-make-directory): simplify.
	(elmo-delete-directory): change IF to WHEN; reindent.
	(elmo-delete-directory): simplify with DOLIST.
	(elmo-list-filter): simplify.
	(elmo-list-delete-if-smaller): remove (was not used).
	(elmo-delete-if): grammar fix in docstring.
	(elmo-delete-if): simplify.
	(elmo-string-match-member): simplify with DOLIST.
	(elmo-string-matched-member): ditto.
	(elmo-get-message-id-from-header): simplify.
	(elmo-string-match-assoc): simplify.
	(elmo-string-matched-assoc): ditto.
	(elmo-string-assoc): ditto.
	(elmo-string-assoc-all): ditto.
	(elmo-string-assoc-all): ditto.
	(elmo-string-rassoc): ditto.
	(elmo-string-rassoc-all): ditto.
	(elmo-make-number-list): ditto.
	(elmo-number-set-to-number-list): ditto.

2016-12-18  Piotr Trojanek  <piotr.trojanek@gmail.com>

	* elmo-file.el (elmo-file-detect-content-type): rewrite LET
	followed by SETQ.

2016-12-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* modb-entity.el (elmo-msgdb-create-message-entity-from-header):
	[modb-standard-entity-handler] Fix the case that
	elmo-msgdb-extra-fields is nil.
	Cf. https://github.com/wanderlust/wanderlust/issues/135

2016-11-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* modb-entity.el (modb-standard-collect-field-values-from-header)
	(modb-standard-get-references-for-entity)
	(modb-standard-get-message-id-for-entity)
	(modb-standard-set-field-name-cache): New functions.
	(modb-standard-reserved-fields): New constant.
	(modb-standard-field-name-cache): New variable.
	(elmo-msgdb-create-message-entity-from-header):
	[modb-standard-entity-handler] Use them.  Improve performance.

2016-11-20  Piotr Trojanek  <piotr.trojanek@gmail.com>

	* elmo-util.el (elmo-list-insert): improve performance.
	(elmo-get-file-string): simplify.

2016-11-14  Piotr Trojanek  <piotr.trojanek@gmail.com>
